// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinnedLabel /> should not render a blue label if not shown 1`] = `null`;

exports[`<PinnedLabel /> should render a blue label if shown for comment 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      className="in"
      id="pinned-label"
      placement="top"
    >
      <FormattedMessage
        id="global.pinned.tooltip.comment"
        values={Object {}}
      />
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="opinion__label opinion__label--blue"
  >
    <i
      className="cap cap-pin-1"
    />
     
    <FormattedMessage
      id="global.pinned.label"
      values={Object {}}
    />
  </span>
</OverlayTrigger>
`;

exports[`<PinnedLabel /> should render a blue label if shown for opinion 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      className="in"
      id="pinned-label"
      placement="top"
    >
      <FormattedMessage
        id="global.pinned.tooltip.opinion"
        values={Object {}}
      />
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="opinion__label opinion__label--blue"
  >
    <i
      className="cap cap-pin-1"
    />
     
    <FormattedMessage
      id="global.pinned.label"
      values={Object {}}
    />
  </span>
</OverlayTrigger>
`;
